--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "fhb-frontend",
     "version": "0.1.0",
+    "homepage": "https://heitor-amaral.github.io/fhb-frontend",
     "private": true,
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "styled-components": "^5.3.3"
     },
@@ -52,6 +54,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "gh-pages": "^3.2.3",
         "prettier": "2.5.1",
         "typescript": "^4.5.4"
     },
