--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "homepage": "https://heitor-amaral.github.io/fhb-frontend",
     "private": true,
     "dependencies": {
+        "axios": "^0.26.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
